# Carpet_Bombing_Simulation_Lab

./: .gitignore  README.md  pyproject.toml
characterization/: README_characterization.md
docs/: dataset_contract.md
docs/meeting_notes/: meeting_day_1.md  meeting_week_3.md
simulations/simulation_v0/traffic_generator/: basic_scapy_traffic.py
src/carpet_bombing/characterization/: README_characterization.md  capture_packets.py  extract_features.py  extract_featuresDocker.py  plot_dataset.py  plot_dataset_v2.py  plot_dataset_v3.py  plot_dataset_v4.py
src/carpet_bombing/mitigation/: README_mitigation.md  __init__.py  config.py  controller.py  mock_detection_alerts.json  models.py  policies.py
src/carpet_bombing/mitigation/backends/: __init__.py  base.py  dry_run.py
src/carpet_bombing/mitigation/strategies/: __init__.py  base.py  dynamic_filtering.py  prefix_rate_limit.py  traffic_classification.py  traffic_redistribution.py
src/carpet_bombing/simulations/simulation_v1/: README.md
src/carpet_bombing/simulations/simulation_v2/: README.md
src/carpet_bombing/simulations/simulation_v3/: README.md
src/carpet_bombing/simulations/simulation_v4/: README.md
src/carpet_bombing/simulations/simulation_v5/: README.md
src/carpet_bombing/simulations/simulation_v5_2/: README.md  __init__.py  main.py
src/carpet_bombing/simulations/simulation_v5_3/: README.md  __init__.py
src/carpet_bombing/ui/: README.md  traffic_visualizer.py
tests/: test_extract_features_ttl_fragmentation.py  test_mitigation_detection_mock.py  test_simulation_v4_fastapi_server.py  test_simulation_v5_2_attack_generator.py
tests/simulation_v5_3/fakes/: fakes.py  runners.py
(+118 files in other folders)
