[tool.poetry]
name = "carpet-bombing-simulation-lab"
version = "0.1.0"
description = "Experimental platform for carpet bombing DDoS detection and mitigation"
authors = ["Hugo"]
readme = "README.md"
packages = [
    { include = "carpet_bombing", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
scapy = ">=2.6.0,<3.0.0"
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
matplotlib = ">=3.8.0,<4.0.0"
plotly = ">=5.22.0,<6.0.0"
streamlit = ">=1.35.0,<2.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.30.0,<1.0.0"
scikit-learn = ">=1.4.0,<2.0.0"
pyshark = ">=0.6,<1.0.0"
jupyter = ">=1.0.0,<2.0.0"
mininet = "*"
requests = ">=2.34.2,<3.0.0"
pyyaml = ">=6.0.3,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
